3.2.2
	+ Added missing EBox::Exceptions uses
3.2.1
	+ Fixed regression which broke DHCP next-server options being written
	  to config (Contributed by on-jz)
3.2
	+ Set version to 3.2
3.1.4
	+ Override daemons when migrating from 3.0
3.1.3
	+ Removed integration with ltsp module
3.1.2
	+ Better warnings for fixed addresses objects with same member
	  name or mac
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
3.1
	+ Implemented _daemonsToDisable()
	+ Moved initRange and endRange methods to the network module to be shared.
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.3
	+ Allow access to /etc/ldap/ldap.conf on apparmor profile
	+ Fix generation of reverse zones, the host part of the addresses
	  was not removed
	+ Fixed bug which used all addresses available in a interface to
	  generate DNS reverse zone instead of the configured ranges
3.0.2
	+ Always write ddns keys file when saving changes
	+ Do not append trailing dot to key names
	+ Adapted to changes in EBox::LogHelper::_convertTimestamp
3.0.1
	+ Do not run daemon and show message when configuration does not
	  provide addresses for interfaces
	+ Ignore virtual interfaces
2.3.9
	+ Keys shared with bind are now stored under /etc/dhcp/ddns-keys
	+ Fixed problem in Options model which DNS domain syncRow call
	+ Fixed problems in DynamicDNS models
	+ Add dhcpd to the bind group if DynamicDNS is enabled
	+ Use isc-dhcp-server upstart script
2.3.8
	+ Added modeldepends to yaml schema
2.3.7
	+ Adapted reverse zones to reverse ip fix in Net::IP
	+ Added missing dynamicDNSDomains() method
	+ Removed deprecated calls to EBox::Model::Manager::model with wildcards
2.3.6
	+ Remove old workarounds in viewCustomizers no longer necessary
	  with foreign in yaml schema
	+ Use a regular model instead of a select composite which is
	  going to be deprecated
	+ Adapted to new Model management framework
	+ Use new services API
2.3.5