@@ -1,3 +1,5 @@
+HEAD
+	+ Restored thin client options for VLANs
 3.2.2
 	+ Added missing EBox::Exceptions uses
 3.2.1
